<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/intro_button_prompt"
        android:id="@+id/intro_button"/>

    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_button_prompt"
        android:id="@+id/contact_button"/>

    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/services_button_prompt"
        android:id="@+id/services_button"/>

    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/education_button_prompt"
        android:id="@+id/education_button"/>

    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/experience_button_prompt"
        android:id="@+id/experience_button"/>
</LinearLayout>